fixed the main content from overlapping with the header

--- a/resources/css/claws.css
+++ b/resources/css/claws.css
@@ -1,18 +1,17 @@
 body {
     font-size: 16px;
-    width: 100%;
 }
 
 
 
 /*banner*/
 header {
-    display: inline-block;
     width: 100%;
-    height: auto;
+    height: 140px;
     position: fixed;
-    z-index: 99;
     border-style: solid;
+    margin: 0 auto;
+    z-index: 99;
     background-color: rgb(255, 246, 246);
 }
 header h1 {
@@ -26,7 +25,6 @@ nav a {
     padding: 10px;
     font-size: 1.5rem;
     text-align: center;
-    transition-property: background-color;
     transition-duration: 100ms;
     float: right;
     overflow: hidden;
@@ -44,10 +42,12 @@ nav a:hover {
 }
 
 /*boss ladies intro*/
-
-.container {
-   width: 100%;
-   height: 850px;
+main{
+    position: absolute;
+    width: 100%;
+    height: 750px;
+    margin-top: 150px;
+    background-color: black;
 }
 .inner-container{
     width: 30%;
@@ -72,6 +72,7 @@ nav a:hover {
    position: absolute;
    transform-origin: top left;
 }
+
 
 /*picture display*/
 img.large {
